Validate reinterpret trick + isolate arena access path; update analysis
Act on the shared FFM findings (JEP 454/472/498, Cimadamore/Minborg FFM-vs-Unsafe
break-even, JEP 401/Valhalla) and test whether they change the recommendation.

- benchmark/ffm/MicroAccessNative.java: cap'n-proto-shaped SCATTERED native
  reads (8 int + 4 long per struct at fixed offsets), comparing a field-sourced
  MemorySegment vs per-access ofAddress(addr).reinterpret(size). Result: the
  reinterpret bounds-check-elimination trick gives NO improvement here
  (~6.0 ns/struct either way) and MemorySegment is ~46% slower than direct
  ByteBuffer. The published break-even is "10-100 iterations" IN A LOOP; cap'n
  proto has no per-segment loop to hoist checks out of, so nothing amortizes.
  This is the mechanism behind the object-mode macro regression, confirmed.

- Access-path isolation (raw-arena-access-comparison.txt): reverting the 7
  accessor files to pre-FFM ByteBuffer access while keeping ArenaAllocator shows
  the arena win is ALLOCATION, not access -- ByteBuffer-access + ArenaAllocator
  matches/beats FFM-access + arena on time (Eval bytes 4993 vs 5305 ns) and
  allocates even less on heap (2844 vs 4993 B/iter, -85% vs heap baseline)
  because it builds no MemorySegment wrappers.

Net conclusion (FFM_PROTOTYPE_RESULTS.md, Follow-up 2): do NOT swap scalar
access to MemorySegment; DO adopt ArenaAllocator (opt-in per message) on the
unchanged ByteBuffer runtime. The remaining object-mode ceiling is reader-wrapper
allocation -- a Valhalla/JEP 401 problem (preview targets JDK 28), out of reach
on JDK 25.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XsLJr53xGeTQd5nxMzjA2P